--- a/website/styles/stylesheet.css
+++ b/website/styles/stylesheet.css
@@ -9,8 +9,8 @@ body {
 }
 
 .card {
-  padding: 8px;
-  background-color: #fff;
+  padding: 16px;
+  background-color: #25252b;
   -webkit-border-radius: 2px;
   -moz-border-radius: 2px;
   border-radius: 2px;
@@ -26,7 +26,7 @@ body {
   text-align: center;
   font-family: 'Helvetica Neue', Helvetica, Arial, serif;
   font-size: 16px;
-  color: #fff;
+  color: #25252b;
 }
 
 input[type="text"]  {
@@ -41,7 +41,7 @@ button {
 
   font-family: 'Helvetica Neue', Helvetica, Arial, serif;
   font-size: 16px;
-  color: #fff;
+  color: #2b2525;
 
   background-color: #2196f3;
   border: none;
@@ -53,7 +53,7 @@ button {
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.3);
 }
 button:hover {
-  background-color: #1e88e5;
+  background-color: #0d5894;
 }
 button:active {
   -webkit-box-shadow: 0 1px 3px 2px rgba(0, 0, 0, 0.3);
