--- a/website/styles/stylesheet.css
+++ b/website/styles/stylesheet.css
@@ -1,14 +1,14 @@
 html {
   font-family: 'Helvetica Neue', Helvetica, Arial, serif;
   color: #faf6f0;
-  background-color: ##1a1a1c;
+  background-color: #1a1a1c;
 }
 
 body {
   width: 50%;
   min-width: 820px;
   margin: 0 auto;
-  background-color: ##1a1a1c;
+  background-color: #1a1a1c;
 }
 
 .card {
